# georgefst-utils

./: README.md  cabal.project  flake.nix  georgefst-utils.cabal
gpio-utils/Util/: GPIO.hs
gpio-utils/Util/GPIO/: Mon.hs  Persistent.hs
gpio-utils/Util/Posix/: Process.hs
nix/: hix.nix
src/: Util.hs
src/Util/: Util.hs
streamly-gpio/Util/Streamly/: GPIO.hs
streamly-okapi/Util/Streamly/: Okapi.hs
streamly-udp/Util/Streamly/: UDP.hs
streamly-utils/Util/: Streamly.hs
