cabal-version:       3.0
name:                georgefst-utils
version:             0.1.0.0

common common
    build-depends:
        base,
        bytestring,
        containers,
        directory,
        extra,
        filepath,
        monad-loops,
        mtl,
        pretty-simple,
        process,
        rawfilepath,
        safe,
        text,
        time,
    ghc-options:
        -Wall
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        ConstraintKinds
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralisedNewtypeDeriving
        ImportQualifiedPost
        LambdaCase
        MultiParamTypeClasses
        NoFieldSelectors
        NamedFieldPuns
        NumericUnderscores
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeApplications
        TypeFamilyDependencies
        TypeOperators
        ViewPatterns

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Util.Util

library gpio-utils
    import: common
    visibility: public
    hs-source-dirs: gpio-utils
    exposed-modules:
        Util.GPIO
        Util.GPIO.Persistent
    other-modules:
        Util.GPIO.Mon
    build-depends:
        georgefst-utils,

library streamly-utils
    import: common
    visibility: public
    hs-source-dirs: streamly-utils
    exposed-modules:
        Util.Streamly
    build-depends:
        georgefst-utils,
        streamly-core,
        streamly,

library streamly-gpio
    import: common
    visibility: public
    hs-source-dirs: streamly-gpio
    exposed-modules:
        Util.Streamly.GPIO
    other-modules:
    build-depends:
        georgefst-utils, streamly-utils, gpio-utils,
        streamly,

library streamly-okapi
    import: common
    visibility: public
    hs-source-dirs: streamly-okapi
    exposed-modules:
        Util.Streamly.Okapi
    build-depends:
        georgefst-utils, streamly-utils,
        http-types,
        okapi,
        streamly,
        wai,
        warp,
