cabal-version:       3.0
name:                georgefst-utils
version:             0.1.0.0

common common
    build-depends:
        base,
        bytestring,
        containers,
        directory,
        extra,
        filepath,
        monad-loops,
        mtl,
        pretty-simple,
        process,
        rawfilepath,
        safe,
        text,
        time,
    ghc-options:
        -Wall
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        FunctionalDependencies
        GADTs
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        RecordWildCards
        TypeFamilies
        TypeFamilyDependencies
        ViewPatterns

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Util.Util

library gpio-utils
    import: common
    visibility: public
    hs-source-dirs: gpio-utils
    exposed-modules:
        Util.GPIO
        Util.GPIO.Persistent
    other-modules:
        Util.GPIO.Mon
    build-depends:
        georgefst-utils,

library streamly-utils
    import: common
    visibility: public
    hs-source-dirs: streamly-utils
    exposed-modules:
        Util.Streamly
    build-depends:
        georgefst-utils,
        streamly-core,
        streamly,

library streamly-gpio
    import: common
    visibility: public
    hs-source-dirs: streamly-gpio
    exposed-modules:
        Util.Streamly.GPIO
    build-depends:
        georgefst-utils, streamly-utils, gpio-utils,
        streamly,

library streamly-udp
    import: common
    visibility: public
    hs-source-dirs: streamly-udp
    exposed-modules:
        Util.Streamly.UDP
    other-modules:
    build-depends:
        georgefst-utils, streamly-utils,
        network,
        streamly,

library streamly-okapi
    import: common
    visibility: public
    hs-source-dirs: streamly-okapi
    exposed-modules:
        Util.Streamly.Okapi
    build-depends:
        georgefst-utils, streamly-utils,
        http-types,
        okapi,
        streamly,
        wai,
        warp,
