cabal-version:       3.0
name:                georgefst-utils
version:             0.1.0.0

common common
    build-depends:
        base,
        bytestring,
        containers,
        directory,
        extra,
        filepath,
        monad-loops,
        mtl,
        pretty-simple,
        process,
        safe,
        text,
        time,
    ghc-options:
        -Wall
    default-language: GHC2021
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        DeriveTraversable
        DerivingStrategies
        DuplicateRecordFields
        FunctionalDependencies
        GADTs
        LambdaCase
        NoFieldSelectors
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        RecordWildCards
        TypeFamilies
        TypeFamilyDependencies
        ViewPatterns

library
    import: common
    hs-source-dirs: src
    exposed-modules:
        Util.Util

library gpio-utils
    import: common
    if os(windows)
        buildable: False
    visibility: public
    hs-source-dirs: gpio-utils
    exposed-modules:
        Util.GPIO
        Util.GPIO.Persistent
    other-modules:
        Util.GPIO.Mon
        Util.Posix.Process
    build-depends:
        georgefst-utils,
        os-string,
        unix,

library streamly-utils
    import: common
    visibility: public
    hs-source-dirs: streamly-utils
    exposed-modules:
        Util.Streamly
    build-depends:
        georgefst-utils,
        streamly-core,
        streamly,

library streamly-gpio
    import: common
    if os(windows)
        buildable: False
    visibility: public
    hs-source-dirs: streamly-gpio
    exposed-modules:
        Util.Streamly.GPIO
    build-depends:
        georgefst-utils, streamly-utils, gpio-utils,
        os-string,
        streamly,

library streamly-udp
    import: common
    visibility: public
    hs-source-dirs: streamly-udp
    exposed-modules:
        Util.Streamly.UDP
    other-modules:
    build-depends:
        georgefst-utils, streamly-utils,
        network,
        streamly,
